<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="decline">Decline</string>
    <string name="accept">Accept</string>
    <string name="unpaid">Unpaid</string>
    <string name="requested_days">Requested Days</string>
    <string name="vacation">Vacation</string>
    <string name="sick_leave">Sick Leave</string>
    <string name="note">Note</string>
    <string name="ok">Ok</string>
</resources>